[package]
name = "op-alloy-rpc-types"
description = "Optimism RPC types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# op-alloy
op-alloy-consensus = { workspace = true, default-feature = false }

# alloy
alloy-primitives = { workspace = true, features = ["rlp", "std"], default-feature = false }
alloy-rpc-types-eth.workspace = true
alloy-network.workspace = true

# `serde` feature dependencies
alloy-serde = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }

# `arbitrary` feature dependencies
arbitrary = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["arbitrary"] }
alloy-consensus = { workspace = true, features = ["arbitrary"] }
alloy-rpc-types = { workspace = true, features = ["arbitrary"] }

arbitrary = { workspace = true, features = ["derive"] }
rand.workspace = true

[features]
default = ["serde"]
serde = [
  "dep:serde",
  "dep:serde_json",
  "dep:alloy-serde",
  "alloy-primitives/serde",
  "op-alloy-consensus/serde",
]
arbitrary = [
    "dep:arbitrary",
    "alloy-primitives/arbitrary",
    "alloy-rpc-types-eth/arbitrary",
]
